src/test/deca/context/valid/instanceof-leftOperandNull.deca
class A{}

{
    null instanceof A;
}
