src/test/deca/context/invalid/declMethod-sameFieldMethodOneClass.deca
class A {
    int coco;

    A coco() {
    }
}